[package]
name = "rocket_csrf"
version = "0.2.0"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2018"
description = "CSRF (Cross-Site Request Forgery) protection for Rocket web framework"
readme = true
homepage = "https://github.com/kotovalexarian/rocket_csrf"
repository = "https://github.com/kotovalexarian/rocket_csrf.git"
license = "MIT"
keywords = ["csrf", "http", "rocket", "security", "web"]
categories = ["web-programming"]
publish = true

[dependencies]
base64 = { version = "0.13.0" }
rand   = { version = "0.7.3" }
rocket = { version = "0.4.5", features = ["private-cookies"] }
