[package]
name = "rocket_csrf_example_minimal"
version = "0.0.0"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rocket = "^0.4.5"
rocket_csrf = { path = "../.." }
rocket_contrib = { version = "^0.4.5", features = ["handlebars_templates"] }
serde = "^1.0.117"
serde_derive = "^1.0.117"
