[package]
name = "rocket_csrf_example_minimal"
version = "0.0.0"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rocket = "0.5.0-rc.2"
rocket_csrf = { path = "../.." }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = "1.0.117"
serde_derive = "1.0.117"
